objects/sumoapp__AdditionalProcess__c.object
<CustomObject>
    <fields>
        <fullName>sumoapp__AttendeeFormFields__c</fullName>
        <label>Attendee Form Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__AttendeeListviewColumns__c</fullName>
        <label>Attendee Listview Columns</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__CourseTooltipSettings__c</fullName>
        <label>Course Tooltip Settings</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__SinglePageOnlineSchedulerFormFields__c</fullName>
        <label>Single Page Online Scheduler Form Fields</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__TooltipSettings__c</fullName>
        <label>Tooltip Settings</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__ViewPopupSettings__c</fullName>
        <label>View Popup Settings</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <label>SUMO Additional Process</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>SUMO Additional Process Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SUMO Additional Process</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>